infrastructure/angular/01.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - image: fatmaguidara/front
        imagePullPolicy: Always
        name: front
        ports:
        - containerPort: 4200
