infrastructure/angular/02.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
      app: front
  ports:
  - name: express-port
    protocol: TCP
    port: 4200
    targetPort: 4200
